기본 설정, 유저, UI 헤더/메뉴 추가 및 정리 (#15)
* npm audit fix

* 기본 설정, 유저, UI 헤더/메뉴 추가

* 정리